[project]
name = "ai-helpdesk-ticket-operations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain==0.3.7",
    "langchain-groq==0.2.1",
    "langgraph==0.2.56",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
]
